--- a/fieldset/styles.css
+++ b/fieldset/styles.css
@@ -1,5 +1,8 @@
+/* Global reset */
 * {
-    /* border: solid black 2px; */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 /* Custom CSS variables */
 :root {
@@ -35,8 +38,24 @@ div.formframe {
 div.heading {
     background-color: var(--background-header);
     border-bottom: solid var(--background-dark) 10px;
-    width: 100%;
+    width: 100vw;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+.heading>h1 {
+    padding: 30px;
+}
+
+#mi {
+    width: 20px;
+}
+
+#age {
+    width: 40px;
+}
+
+.headtwo {
+    padding: 10px;
 }
